--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ coverage/
 ./index.js
 ./operators.js
 ./schedulers.js
+./constructors.js
 ./index.d.ts
 ./operators.d.ts
 ./schedulers.d.ts
+./constructors.d.ts
