--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jazzi-observable",
-    "version": "1.0.2",
+    "version": "1.0.3-alpha",
     "main": "index.js",
     "author": "Juan Gomez",
     "license": "MIT",
