--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "jazzi-observable",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "main": "index.js",
     "author": "Juan Gomez",
     "license": "MIT",
@@ -20,55 +20,21 @@
         "jazzi": "latest"
     },
     "devDependencies": {
-        "@babel/cli": "^7.13.14",
-        "@babel/core": "^7.13.14",
-        "@babel/preset-env": "^7.13.12",
-        "babel-jest": "^26.6.3",
-        "babel-loader": "^8.2.2",
-        "babel-polyfill": "^6.26.0",
-        "gulp": "^4.0.2",
-        "jest": "^26.6.3",
-        "ramda": "^0.27.1",
-        "webpack": "^5.30.0",
-        "webpack-cli": "^4.6.0",
-        "webpack-dev-server": "^3.11.2"
+        "@types/jest": "^27.0.1",
+        "jest": "^27.1.1",
+        "ts-jest": "^27.0.5",
+        "typescript": "^4.5.5"
     },
     "scripts": {
-        "build": "gulp build",
-        "build:dev": "gulp dev",
-        "clean": "gulp clean",
-        "start": "gulp watch",
+        "build": "yarn build:ts && yarn build:deno",
+        "build:ts": "tsc",
+        "build:deno": "deno run --unstable --allow-read --allow-write scripts/build.js",
+        "clean": "rm -rf ./dist && rm -rf ./deno && rm -rf ./coverage",
         "test": "rm -rf ./coverage && jest --coverage --verbose",
+        "test:silent": "rm -rf ./coverage && jest --silent",
         "test:watch": "jest --verbose --watch",
-        "prepublish": "yarn build"
-    },
-    "jest": {
-        "verbose": true,
-        "collectCoverageFrom": [
-            "src/*.{js,jsx}",
-            "src/*/*.{js,jsx}"
-        ],
-        "testMatch": [
-            "**/__tests__/(*.)test.js"
-        ],
-        "testEnvironment": "node",
-        "transform": {
-            ".js$": "babel-jest"
-        },
-        "transformIgnorePatterns": [
-            "<rootDir>/node_modules/"
-        ],
-        "moduleDirectories": [
-            "node_modules",
-            "modules"
-        ],
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "jsx"
-        ],
-        "setupFilesAfterEnv": [
-            "./setupTests.js"
-        ]
+        "test:deno": "deno run ./deno/Observable/mod.ts",
+        "verify": "yarn build:deno && yarn test:deno",
+        "prepublish": "yarn clean && yarn build"
     }
 }
