--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
     "name": "jazzi-observable",
     "version": "1.2.1",
-    "main": "index.js",
+    "main": "./dist/Observable/index.js",
     "author": "Juan Gomez",
     "license": "MIT",
     "private": false,
-    "types": "index.d.ts",
+    "publishConfig": {
+        "access": "public"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Jkierem/jazzi-observable"
+    },
     "files": [
-        "index.js",
-        "index.d.ts",
-        "operators.js",
-        "operators.d.ts",
-        "schedulers.js",
-        "schedulers.d.ts",
-        "constructors.js",
-        "constructors.d.ts"
+        "dist"
     ],
-    "dependencies": {
-        "jazzi": "latest"
-    },
-    "devDependencies": {
-        "@types/jest": "^27.0.1",
-        "jest": "^27.1.1",
-        "ts-jest": "^27.0.5",
-        "typescript": "^4.5.5"
-    },
     "scripts": {
         "build": "yarn build:ts && yarn build:deno",
         "build:ts": "tsc",
@@ -36,5 +26,14 @@
         "test:deno": "deno run ./deno/Observable/mod.ts",
         "verify": "yarn build:deno && yarn test:deno",
         "prepublish": "yarn clean && yarn build"
+    },
+    "dependencies": {
+        "jazzi": "latest"
+    },
+    "devDependencies": {
+        "@types/jest": "^27.0.1",
+        "jest": "^27.1.1",
+        "ts-jest": "^27.0.5",
+        "typescript": "^4.5.5"
     }
 }
