--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "jazzi-observable",
-    "version": "1.3.0",
-    "main": "./dist/Observable/index.js",
+    "version": "2.0.0",
+    "main": "./index.js",
     "author": "Juan Gomez",
     "license": "MIT",
     "private": false,
@@ -13,19 +13,32 @@
         "url": "https://github.com/Jkierem/jazzi-observable"
     },
     "files": [
-        "dist"
+        "_internals",
+        "_types",
+        "Observable",
+        "constructors.d.ts",
+        "constructors.js",
+        "index.d.ts",
+        "index.js",
+        "operators.d.ts",
+        "operators.js",
+        "schedulers.d.ts",
+        "schedulers.js",
+        "type.d.ts",
+        "type.js"
     ],
     "scripts": {
         "build": "yarn build:ts && yarn build:deno",
         "build:ts": "tsc",
         "build:deno": "deno run --unstable --allow-read --allow-write scripts/build.js",
-        "clean": "rm -rf ./dist && rm -rf ./deno && rm -rf ./coverage",
+        "move": "mv -v ./dist/* ./ && rm -r ./dist",
+        "clean": "deno run --allow-write ./scripts/clean-build-files.ts && rm -rf ./deno && rm -rf ./coverage",
         "test": "rm -rf ./coverage && jest --coverage --verbose",
         "test:silent": "rm -rf ./coverage && jest --silent",
         "test:watch": "jest --verbose --watch",
         "test:deno": "deno run ./deno/Observable/mod.ts",
         "verify": "yarn build:deno && yarn test:deno",
-        "prepublish": "yarn clean && yarn build"
+        "prepublish": "yarn clean && yarn build && yarn move"
     },
     "dependencies": {
         "jazzi": "latest"
