--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "skipLibCheck": true,
       "outDir": "./dist"
     },
-    "include": ["src/Observable/*"],
+    "include": ["src/Observable/*", "src/*"],
     "exclude": ["node_modules", "src/__**/*"],
     "$schema": "https://json.schemastore.org/tsconfig",
     "display": "Recommended"
